--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -8,7 +8,7 @@
     <br/><br/>
     <h1>Spring Boot file upload example</h1>
     <form method="POST" action="/add" th:object="${actor}"
-          enctype=""multipart/form-data>
+          enctype="multipart/form-data">
             Name:<input type="text" th:field="*{name}" />
             Real Name: <input type="text" th:field="*{realname}" />
             <input type="file" name="file"/><br/><br/>
